--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	--primary-color: #e3e3e3;
 	--black-1-color: #1e1e1e;
 	--green-1-color: #c3ff8a;
+	--green-hover-color: #7ED22F;
 }
 
 /* all resets */
@@ -37,10 +38,26 @@ body {
 /*Header*/
 header {
 	padding: 2px 0;
-	background: linear-gradient(90deg, rgba(185,255,157,1) 0%, rgba(146,236,111,1) 100%);
+	background: linear-gradient(90deg, #D7FFD0, #9ADD80, #5BC730);
+	background-size: 400% 400%;
+	animation: gradientShift 15s ease infinite;
 	text-align: center;
 	font-family: "Oswald";
 	font-size: 24px;
+}
+
+@keyframes gradientShift {
+	0% {
+		background-position: 0% 50%;
+	}
+
+	50% {
+		background-position: 100% 50%;
+	}
+
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 /*Main content*/
@@ -88,10 +105,16 @@ main .flex {
 	padding: 15px 10px;
 	display: inline-block;
 	border-radius: 5px;
+	transition: 0.5s;
+}
+
+.l-side .btn-portf:hover {
+	background: var(--green-hover-color);
+	color: #fff;
 }
 
 /*Side right*/
- .r-side img {
+ .r-side img, .r-side svg {
 	margin-top: 80px;
 }
 
@@ -101,9 +124,15 @@ main .flex {
 	justify-content: space-around;
 }
 
-.r-side ul img {
+svg {
 	width: 54px;
 	height: auto;
+	fill: var(--green-1-color);
+	transition: 0.5s;
+}
+
+svg:hover {
+	fill: var(--green-hover-color);
 }
 
 @media (width <= 1100px) {
